@@ -86,6 +86,7 @@ import Distribution.Text
 import Distribution.Utils.NubList
 import Language.Haskell.Extension
 
+import Distribution.Compat.Environment ( lookupEnv )
 import qualified Data.Map as Map
 import Data.Version             ( showVersion )
 import System.Directory
@@ -93,7 +94,7 @@ import System.Directory
          , canonicalizePath, removeFile )
 import System.FilePath          ( (</>), (<.>), takeExtension
                                 , takeDirectory, replaceExtension
-                                , isRelative )
+                                , isRelative, searchPathSeparator )
 import qualified System.Info
 
 -- -----------------------------------------------------------------------------
@@ -283,9 +284,11 @@ getInstalledPackages :: Verbosity -> Compiler -> PackageDBStack
                      -> ProgramConfiguration
                      -> IO InstalledPackageIndex
 getInstalledPackages verbosity comp packagedbs conf = do
-  checkPackageDbEnvVar
   checkPackageDbStack comp packagedbs
-  pkgss <- getInstalledPackages' verbosity packagedbs conf
+  envPackageDBs <- maybe []
+                   (map SpecificPackageDB . unintersperse searchPathSeparator)
+                   <$> lookupEnv "GHC_PACKAGE_PATH"
+  pkgss <- getInstalledPackages' verbosity (envPackageDBs ++ packagedbs) conf
   index <- toPackageIndex verbosity pkgss conf
   return $! hackRtsPackage index
 
@@ -350,10 +353,6 @@ getUserPackageDB _verbosity ghcProg (Platform arch os) = do
       | ghcVersion >= Version [6,12] []  = "package.conf.d"
       | otherwise                        = "package.conf"
     Just ghcVersion = programVersion ghcProg
-
-checkPackageDbEnvVar :: IO ()
-checkPackageDbEnvVar =
-    Internal.checkPackageDbEnvVar "GHC" "GHC_PACKAGE_PATH"
 
 checkPackageDbStack :: Compiler -> PackageDBStack -> IO ()
 checkPackageDbStack comp = if flagPackageConf implInfo
