@@ -73,6 +73,9 @@
 	* Internal 'build-tools' dependencies are now added to PATH
 	  upon invocation of GHC, so that they can be conveniently
 	  used via `-pgmF`. (#1541)
+	* Respect the environment variables 'GHC_PACKAGE_PATH' and
+	'GHCJS_PACKAGE_PATH', lifting the restriction that they be unset.
+	(#3728,#2711).
 
 1.24.0.0 Ryan Thomas <ryan@ryant.org> March 2016
 	* Support GHC 8.
